--- a/requirements.txt
+++ b/requirements.txt
@@ -37,12 +37,15 @@ html5lib==1.1
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.19
+langchain-community==0.3.17
 langchain-core==0.3.35
+langchain-google-genai==2.0.9
 langchain-text-splitters==0.3.6
 langdetect==1.0.9
 langsmith==0.3.8
@@ -51,12 +54,14 @@ marshmallow==3.26.1
 multidict==6.1.0
 mypy-extensions==1.0.0
 nest-asyncio==1.6.0
+networkx==3.4.2
 nltk==3.9.1
 numpy==1.26.4
 olefile==0.47
 openpyxl==3.1.5
 orjson==3.10.15
 packaging==24.2
+pandas==2.2.3
 propcache==0.2.1
 proto-plus==1.26.0
 protobuf==5.29.3
@@ -65,6 +70,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
+pydantic-settings==2.7.1
 pydantic_core==2.27.2
 pyparsing==3.2.1
 pypdf==5.3.0
@@ -74,6 +80,7 @@ python-dotenv==1.0.1
 python-iso639==2025.2.8
 python-magic==0.4.27
 python-oxmsg==0.0.2
+pytz==2025.1
 PyYAML==6.0.2
 RapidFuzz==3.12.1
 regex==2024.11.6
@@ -89,6 +96,7 @@ tiktoken==0.9.0
 tqdm==4.67.1
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 unstructured==0.16.21
 unstructured-client==0.30.1
 uritemplate==4.1.1
